[gd_scene load_steps=9 format=3 uid="uid://bgj1yjdo56hv2"]

[ext_resource type="PackedScene" uid="uid://cyh5ty15w04nk" path="res://Scenes/Instances/character.tscn" id="1_obnvj"]
[ext_resource type="Texture2D" uid="uid://b8i0urtuieicu" path="res://assests/Skins/criminalMaleA.png" id="2_01lhc"]
[ext_resource type="Script" uid="uid://d2cjr0ytekeg7" path="res://Scripts/camera_3d.gd" id="2_ogm7o"]
[ext_resource type="Script" uid="uid://kfg4d78ewmth" path="res://Scripts/PersonalityUI.gd" id="3_2ms1e"]
[ext_resource type="Texture2D" uid="uid://d4ln8y5hopefd" path="res://assests/Skins/cyborgFemaleA.png" id="3_vc36h"]
[ext_resource type="Script" uid="uid://bbj2xqkl6cra3" path="res://Scripts/kingdomUI.gd" id="4_abk0b"]
[ext_resource type="Texture2D" uid="uid://cy5svfmcueksu" path="res://assests/Skins/skaterFemaleA.png" id="4_c6ofp"]
[ext_resource type="Texture2D" uid="uid://delalcivwnxwb" path="res://assests/Skins/skaterMaleA.png" id="5_if7nu"]

[node name="ChangeSkin" type="Node"]

[node name="Node3D" type="Node3D" parent="."]

[node name="Player" parent="Node3D" instance=ExtResource("1_obnvj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.008, 0.017)
skins = Array[Texture2D]([ExtResource("2_01lhc"), ExtResource("3_vc36h"), ExtResource("4_c6ofp"), ExtResource("5_if7nu")])

[node name="CanvasLayer" type="CanvasLayer" parent="Node3D"]

[node name="UI" type="Control" parent="Node3D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CharacterCustomization" type="Control" parent="Node3D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Node3D/CanvasLayer/UI/CharacterCustomization"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -233.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.03829, 1.00164)
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Name"
max_length = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "<"

[node name="Label" type="Label" parent="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Skin Choice"

[node name="Button2" type="Button" parent="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ">"

[node name="CharButton2" type="Button" parent="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
action_mode = 0
text = "Next"
script = ExtResource("3_2ms1e")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Node3D/CanvasLayer/UI/CharacterCustomization"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.75
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2

[node name="RotateButton" type="Button" parent="Node3D/CanvasLayer/UI/CharacterCustomization/AspectRatioContainer"]
light_mask = 0
visibility_layer = 0
layout_mode = 2
size_flags_stretch_ratio = 5.16

[node name="PersonalityCustomization" type="Control" parent="Node3D/CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Node3D/CanvasLayer/UI/PersonalityCustomization"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 100.0
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Personalities"

[node name="HBoxContainer" type="HBoxContainer" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Extrovert"

[node name="HSlider" type="HSlider" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Introvert"

[node name="HBoxContainer2" type="HBoxContainer" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Sensing"

[node name="HSlider" type="HSlider" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Intuition"

[node name="HBoxContainer3" type="HBoxContainer" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Thinking"

[node name="HSlider" type="HSlider" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Feeling"

[node name="HBoxContainer4" type="HBoxContainer" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Judging"

[node name="HSlider" type="HSlider" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Perceiving"

[node name="PersonalityButton" type="Button" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
action_mode = 0
text = "Next"
script = ExtResource("4_abk0b")

[node name="MarginContainer2" type="MarginContainer" parent="Node3D/CanvasLayer/UI/PersonalityCustomization"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label2" type="Label" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Hobbies"

[node name="CheckBox" type="CheckBox" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Music"

[node name="CheckBox2" type="CheckBox" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Gardening"

[node name="CheckBox3" type="CheckBox" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Building"

[node name="CheckBox4" type="CheckBox" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Reading"

[node name="CheckBox5" type="CheckBox" parent="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "Art"

[node name="KingdomChoice" type="Control" parent="Node3D/CanvasLayer/UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.48042, 1.78516, 2.77394)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00749302, 1.04837, 3.54811)
current = true
script = ExtResource("2_ogm7o")

[connection signal="pressed" from="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer/HBoxContainer/Button" to="Node3D/Player" method="leftChoice"]
[connection signal="pressed" from="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="Node3D/Player" method="rightChoice"]
[connection signal="pressed" from="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer/CharButton2" to="Node3D/CanvasLayer/UI/CharacterCustomization/MarginContainer/VBoxContainer/CharButton2" method="personalityUI"]
[connection signal="mouse_entered" from="Node3D/CanvasLayer/UI/CharacterCustomization/AspectRatioContainer/RotateButton" to="Node3D/Player" method="mouseEntered"]
[connection signal="mouse_exited" from="Node3D/CanvasLayer/UI/CharacterCustomization/AspectRatioContainer/RotateButton" to="Node3D/Player" method="mouseExited"]
[connection signal="pressed" from="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/PersonalityButton" to="Node3D/CanvasLayer/UI/PersonalityCustomization/MarginContainer/VBoxContainer/PersonalityButton" method="kingdomUI"]
